--- a/index.html
+++ b/index.html
@@ -4,73 +4,129 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Layanan Bantuan</title>
+  <meta name="description" content="Layanan bantuan resmi. Klik untuk Live Chat." />
   <style>
+    :root{
+      --bg1:#0f2a4d;
+      --bg2:#1e88e5;
+      --card:#ffffff12;
+      --btn:#ffd54f;
+      --text:#ffffff;
+      --textSoft:rgba(255,255,255,.88);
+    }
+    *{ box-sizing:border-box; }
     body{
       margin:0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: linear-gradient(135deg,#0f2a4d,#1e88e5);
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--text);
+      background: radial-gradient(1200px 800px at 20% 10%, rgba(255,255,255,.12), transparent 60%),
+                  linear-gradient(135deg,var(--bg1),var(--bg2));
+      min-height:100vh;
       display:flex;
       align-items:center;
       justify-content:center;
-      height:100vh;
-      color:#fff;
+      padding:18px;
       text-align:center;
     }
+    .wrap{
+      width:100%;
+      max-width:520px;
+    }
     .card{
-      background:#ffffff10;
-      backdrop-filter: blur(10px);
-      padding:40px 30px;
-      border-radius:16px;
-      width:90%;
-      max-width:420px;
-      box-shadow:0 10px 30px rgba(0,0,0,.25);
+      width:100%;
+      background:var(--card);
+      border:1px solid rgba(255,255,255,.12);
+      border-radius:18px;
+      padding:22px 18px 18px;
+      backdrop-filter: blur(12px);
+      box-shadow:0 12px 34px rgba(0,0,0,.28);
     }
     .logo{
-      width:180px;
-      margin-bottom:16px;
-      border-radius:12px;
+      width:min(210px, 68vw);
+      height:auto;
+      border-radius:14px;
+      display:block;
+      margin:2px auto 14px;
+    }
+    .title{
+      margin:0 0 8px;
+      font-size:18px;
+      font-weight:700;
+      letter-spacing:.2px;
     }
     .sub{
+      margin:0 auto 16px;
+      max-width:34ch;
       font-size:14px;
-      line-height:1.4;
-      opacity:.9;
-      margin:0 0 22px 0;
+      line-height:1.45;
+      color:var(--textSoft);
     }
     .btn{
-      display:inline-block;
-      padding:14px 26px;
-      background:#ffd54f;
-      color:#222;
-      border-radius:10px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:10px;
+      width:100%;
+      padding:16px 16px;
+      background:var(--btn);
+      color:#1b1b1b;
+      border-radius:14px;
       text-decoration:none;
-      font-weight:bold;
+      font-weight:800;
       font-size:16px;
-      transition:.2s ease;
-      min-width:220px;
+      letter-spacing:.2px;
+      box-shadow:0 12px 24px rgba(0,0,0,.25);
+      transition: transform .12s ease, box-shadow .12s ease;
+      -webkit-tap-highlight-color: transparent;
     }
-    .btn:hover{
-      transform:translateY(-2px);
-      box-shadow:0 8px 18px rgba(0,0,0,.3);
+    .btn:active{
+      transform: translateY(1px) scale(.99);
+      box-shadow:0 8px 18px rgba(0,0,0,.22);
     }
-    .trust{
-      margin-top:18px;
+    .mini{
+      margin:14px 0 0;
       font-size:12px;
-      opacity:.85;
+      color:rgba(255,255,255,.82);
+    }
+    .pill{
+      display:inline-block;
+      margin-top:10px;
+      padding:8px 12px;
+      border-radius:999px;
+      background:rgba(255,255,255,.10);
+      border:1px solid rgba(255,255,255,.12);
+      font-size:12px;
+      color:rgba(255,255,255,.9);
+    }
+    /* Desktop polish */
+    @media (min-width: 768px){
+      .card{ padding:30px 26px 22px; }
+      .title{ font-size:20px; }
+      .sub{ font-size:15px; }
+      .btn{ font-size:17px; padding:18px 18px; }
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <img src="https://i.imgur.com/SATFnxb.jpeg" alt="Logo" class="logo">
+  <main class="wrap">
+    <section class="card">
+      <!-- LOGO -->
+      <img src="https://i.imgur.com/SATFnxb.jpeg" alt="Logo" class="logo" />
 
-    <p class="sub">
-      Klaim bonus member baru & bantuan deposit.<br/>
-      Klik tombol di bawah untuk chat dengan admin.
-    </p>
+      <h1 class="title">Layanan Bantuan Resmi</h1>
+      <p class="sub">
+        Klaim bonus member baru & bantuan deposit.<br />
+        Klik tombol di bawah untuk chat dengan admin.
+      </p>
 
-    <a href="https://tinyurl.com/36v7nd5y" class="btn">KLAIM BONUS VIA LIVE CHAT</a>
+      <!-- LIVECHAT -->
+      <a class="btn" href="https://tinyurl.com/36v7nd5y" rel="noopener">
+        KLAIM BONUS VIA LIVE CHAT
+      </a>
 
-    <div class="trust">Layanan resmi bantuan member • Respon cepat</div>
-  </div>
+      <div class="pill">Respon cepat • Bantuan 1-1</div>
+      <p class="mini">Jika tombol tidak terbuka, coba refresh lalu klik lagi.</p>
+    </section>
+  </main>
 </body>
 </html>
