--- a/index.html
+++ b/index.html
@@ -1,236 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TARUNA4D - freebet </title>
-  <style>
-    :root{
-      --bg1:#000000;
-      --bg2:#e2e2dc;
-      --card:rgba(255,255,255,.12);
-      --border:rgba(255, 255, 255, 0.16);
-      --text:#ffffff;
-      --muted:rgba(255,255,255,.86);
-      --btn1:#4ff3ff;
-      --btn2:rgb(255, 255, 255);
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:18px;
-      color:var(--text);
-      background:
-        radial-gradient(900px 600px at 15% 10%, rgba(255,255,255,.12), transparent 60%),
-        linear-gradient(135deg,var(--bg1),var(--bg2));
-      text-align:center;
-    }
-    .card{
-      width:100%;
-      max-width:420px;
-      background:var(--card);
-      border:1px solid var(--border);
-      border-radius:18px;
-      padding:22px 18px 18px;
-      backdrop-filter: blur(12px);
-      box-shadow:0 14px 40px rgba(0,0,0,.28);
-    }
-    .logo{
-      width:min(220px, 70vw);
-      border-radius:14px;
-      display:block;
-      margin:2px auto 14px;
-    }
-    h1{
-      margin:0 0 8px;
-      font-size:18px;
-      font-weight:800;
-      letter-spacing:.2px;
-    }
-    p{
-      margin:0 auto 16px;
-      font-size:14px;
-      line-height:1.45;
-      color:var(--muted);
-      max-width:34ch;
-    }
-    .btn{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      width:100%;
-      padding:14px 14px;
-      border-radius:14px;
-      text-decoration:none;
-      font-weight:800;
-      letter-spacing:.2px;
-      transition: transform .12s ease;
-      -webkit-tap-highlight-color: transparent;
-    }
-    .btn:active{ transform: translateY(1px) scale(.99); }
-    .btn-primary{
-      background:var(--btn1);
-      color:#1b1b1b;
-      box-shadow:0 12px 24px rgba(0,0,0,.22);
-      margin-bottom:10px;
-    }
-    .btn-secondary{
-      background:var(--btn2);
-      color:var(--text);
-      border:1px solid var(--border);
-    }
-    .small{
-      margin-top:14px;
-      font-size:12px;
-      color:rgba(255,255,255,.78);
-    }
-    .btn-wrap{
-  display:flex;
-  flex-direction:column;
-  gap:14px;
-  margin-top:18px;
-}
-
-.btn{
-  position:relative;
-  overflow:hidden;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:56px;
-  border-radius:14px;
-  font-weight:900;
-  letter-spacing:.5px;
-  text-decoration:none;
-  user-select:none;
-
-  /* biar keliatan “kolom” tombol */
-  box-shadow: 0 10px 22px rgba(0,0,0,.22);
-  border: 1px solid rgba(255,255,255,.25);
-}
-
-/* Warna tombol */
-.btn-primary{ background:#5ff6ff; color:#06202a; }
-.btn-secondary{ background:#ffffff; color:#0b1b10; }
-.btn-tertiary{ background:rgba(255,255,255,.18); color:#fff; }
-
-/* ================== EFEK BERKILAU (SHINE) ================== */
-.btn::before{
-  content:"";
-  position:absolute;
-  top:-40%;
-  left:-60%;
-  width:45%;
-  height:180%;
-  transform:rotate(20deg);
-
-  background: linear-gradient(
-    to right,
-    rgba(255,255,255,0) 0%,
-    rgba(255,255,255,.55) 45%,
-    rgba(255,255,255,0) 100%
-  );
-
-  opacity:.7;
-  filter: blur(0.5px);
-  animation: shine 2.4s ease-in-out infinite;
-}
-
-/* beda kecepatan tiap tombol biar natural */
-.btn-secondary::before{ animation-duration: 2.9s; opacity:.55; }
-.btn-tertiary::before{ animation-duration: 3.3s; opacity:.45; }
-
-@keyframes shine{
-  0%{ left:-70%; }
-  60%{ left:120%; }
-  100%{ left:120%; }
-}
-
-/* Hover (desktop) */
-.btn:hover{
-  transform: translateY(-1px);
-  transition: .18s ease;
-}
-.btn{
-  box-shadow:
-    0 10px 22px rgba(0,0,0,.22),
-    0 0 18px rgba(95,246,255,.18);
-}
-/* JARAK ANTAR TOMBOL */
-.btn-wrap{
-  display:flex;
-  flex-direction:column;
-  gap:22px;          /* ⬅️ ini yang bikin renggang */
-  margin-top:22px;
-}
-
-/* kalau tombol bukan di btn-wrap, pakai ini */
-.btn{
-  margin-bottom:8px;
-}
-
-/* khusus tombol terakhir biar tidak kebanyakan space */
-.btn:last-child{
-  margin-bottom:0;
-}
-    /* ====== License bottom ====== */
-    .license{
-      position:fixed;
-      left:12px;
-      right:12px;
-      bottom:12px;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:8px;
-      font-size:12px;
-      opacity:.95;
-      text-shadow:0 2px 6px rgba(0,0,0,.6);
-      pointer-events:none; /* biar gak ganggu klik */
-    }
-    .license .logos{
-      display:flex; gap:8px; flex-wrap:wrap;
-      justify-content:center;
-      pointer-events:auto;
-    }
-    .license img{height:22px; width:auto; opacity:.92}
-  </style>
-</head>
-<body>
-  <main class="card">
-    <!-- GANTI LOGO DI SINI (boleh pakai logo PNG kamu) -->
-    <img class="logo" src="https://i.imgur.com/p3DvqGg.png" alt="TARUNA4D Logo" />
-
-    <h1></h1>
-    <p>Klik tombol di bawah untuk Login & chat dengan admin.</p>
-
-
-    <!-- GANTI LINK CS (Messenger / WA / Livechat) -->
-    <a class="btn btn-secondary" href="https://tinyurl.com/3r2mdpb4" rel="noopener">
-      KLAIM FREEBET
-    </a>
-
-    <!-- GANTI LINK CS (Messenger / WA / Livechat) -->
-     <a class="btn btn-tertiary" href="https://tarunapordi.com/register" target="_blank">DAFTAR AKUN</a>
-
-    <div class="small">Jika tombol tidak terbuka, coba refresh lalu klik lagi.</div>
-  </main>
-  <!-- License -->
-  <div class="license">
-    <div class="logos">
-      <img src="https://idl-cdn.rika.online/idl88/front/as-min.png" alt="logo">
-      <img src="https://img.viva88athenae.com/assets/guidelines_w.png" alt="logo">
-      <img src="https://idl-cdn.rika.online/toko4d/front/18.webp" alt="18+">
-    </div>
-    <div>© Copyright 2014 - 2026. All Rights Reserved. | 18+</div>
-  </div>
-</body>
-</html>
-
-
+<!DOCTYPE html><html lang="id"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>TARUNA4D - freebet </title><style>:root{--bg1:#000000;--bg2:#e2e2dc;--card:rgba(255,255,255,.12);--border:rgba(255,255,255,.16);--text:#ffffff;--muted:rgba(255,255,255,.86);--btn1:#4ff3ff;--btn2:rgb(255,255,255)}*{box-sizing:border-box}body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:18px;color:var(--text);background:radial-gradient(900px 600px at 15% 10%,rgba(255,255,255,.12),transparent 60%),linear-gradient(135deg,var(--bg1),var(--bg2));text-align:center}.card{width:100%;max-width:420px;background:var(--card);border:1px solid var(--border);border-radius:18px;padding:22px 18px 18px;backdrop-filter:blur(12px);box-shadow:0 14px 40px rgba(0,0,0,.28)}.logo{width:min(220px,70vw);border-radius:14px;display:block;margin:2px auto 14px}h1{margin:0 0 8px;font-size:18px;font-weight:800;letter-spacing:.2px}p{margin:0 auto 16px;font-size:14px;line-height:1.45;color:var(--muted);max-width:34ch}.btn{display:flex;align-items:center;justify-content:center;width:100%;padding:14px 14px;border-radius:14px;text-decoration:none;font-weight:800;letter-spacing:.2px;transition:transform .12s ease;-webkit-tap-highlight-color:transparent}.btn:active{transform:translateY(1px) scale(.99)}.btn-primary{background:var(--btn1);color:#1b1b1b;box-shadow:0 12px 24px rgba(0,0,0,.22);margin-bottom:10px}.btn-secondary{background:var(--btn2);color:var(--text);border:1px solid var(--border)}.small{margin-top:14px;font-size:12px;color:rgba(255,255,255,.78)}.btn-wrap{display:flex;flex-direction:column;gap:14px;margin-top:18px}.btn{position:relative;overflow:hidden;display:flex;justify-content:center;align-items:center;height:56px;border-radius:14px;font-weight:900;letter-spacing:.5px;text-decoration:none;user-select:none;box-shadow:0 10px 22px rgba(0,0,0,.22);border:1px solid rgba(255,255,255,.25)}.btn-primary{background:#5ff6ff;color:#06202a}.btn-secondary{background:#ffffff;color:#0b1b10}.btn-tertiary{background:rgba(255,255,255,.18);color:#fff}.btn::before{content:"";position:absolute;top:-40%;left:-60%;width:45%;height:180%;transform:rotate(20deg);background:linear-gradient(to right,rgba(255,255,255,0) 0%,rgba(255,255,255,.55) 45%,rgba(255,255,255,0) 100%);opacity:.7;filter:blur(.5px);animation:shine 2.4s ease-in-out infinite}.btn-secondary::before{animation-duration:2.9s;opacity:.55}.btn-tertiary::before{animation-duration:3.3s;opacity:.45}@keyframes shine{0%{left:-70%}60%{left:120%}100%{left:120%}}.btn:hover{transform:translateY(-1px);transition:.18s ease}.btn{box-shadow:0 10px 22px rgba(0,0,0,.22),0 0 18px rgba(95,246,255,.18)}.btn-wrap{display:flex;flex-direction:column;gap:22px;margin-top:22px}.btn{margin-bottom:8px}.btn:last-child{margin-bottom:0}.license{position:fixed;left:12px;right:12px;bottom:12px;display:flex;flex-direction:column;align-items:center;gap:8px;font-size:12px;opacity:.95;text-shadow:0 2px 6px rgba(0,0,0,.6);pointer-events:none}.license .logos{display:flex;gap:8px;flex-wrap:wrap;justify-content:center;pointer-events:auto}.license img{height:22px;width:auto;opacity:.92}</style></head><body><main class="card"><img class="logo" src="https://i.imgur.com/p3DvqGg.png" alt="TARUNA4D Logo"/><h1></h1><p>Klik tombol di bawah untuk Login & chat dengan admin.</p><a class="btn btn-secondary" href="https://tinyurl.com/3r2mdpb4" rel="noopener">KLAIM FREEBET</a><a class="btn btn-tertiary" href="https://tarunapordi.com/register" target="_blank">DAFTAR AKUN</a><div class="small">Jika tombol tidak terbuka, coba refresh lalu klik lagi.</div></main><div class="license"><div class="logos"><img src="https://idl-cdn.rika.online/idl88/front/as-min.png" alt="logo"><img src="https://img.viva88athenae.com/assets/guidelines_w.png" alt="logo"><img src="https://idl-cdn.rika.online/toko4d/front/18.webp" alt="18+"></div><div>© Copyright 2014 - 2026. All Rights Reserved. | 18+</div></div></body></html>
